# spatialtissuepy

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: Makefile  requirements.txt
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst
docs/source/_static/: custom.css
docs/source/_templates/autosummary/: class.rst  module.rst
docs/source/api/: core.rst  index.rst  io.rst  lda.rst  mcp.rst  network.rst  spatial.rst  statistics.rst  summary.rst  synthetic.rst  topology.rst  viz.rst
docs/source/getting_started/: concepts.rst  index.rst  installation.rst  quickstart.rst
docs/source/tutorials/: index.rst
docs/source/user_guide/: abm_integration.rst  data_handling.rst  feature_extraction.rst  index.rst  mapper_analysis.rst  mcp_integration.rst  network_analysis.rst  spatial_statistics.rst  topic_modeling.rst  visualization.rst
docs/tutorials/: 01_quickstart.ipynb  02_data_loading.ipynb  03_spatial_analysis.ipynb  04_statistics.ipynb  05_neighborhoods.ipynb  06_networks.ipynb  07_spatial_lda.ipynb  08_topology.ipynb  09_visualization.ipynb  10_multi_sample.ipynb  11_physicell_integration.ipynb  11_physicell_integration.marimo.py  12_advanced_workflows.ipynb  13_more_mapper_analysis.ipynb  tutorial.ipynb
examples/: basic_workflow.py
examples/sample_data/: generate_sample_data.py  random_sample_data.csv
spatialtissuepy/: __init__.py
spatialtissuepy/core/: __init__.py  cell.py  spatial_data.py  validators.py
spatialtissuepy/io/: __init__.py  readers.py  writers.py
spatialtissuepy/lda/: __init__.py  analysis.py  metrics.py  sampling.py  spatial_lda.py  summary_metrics.py
spatialtissuepy/mcp/: __init__.py  cli.py  serialization.py  server.py  session.py
spatialtissuepy/mcp/tools/: __init__.py  data.py  lda.py  network.py  spatial.py  statistics.py  summary.py  synthetic.py  topology.py  viz.py
spatialtissuepy/microenvironment/: __init__.py  boundaries.py  gradients.py  niches.py
spatialtissuepy/network/: __init__.py  assortativity.py  cell_graph.py  centrality.py  clustering.py  communicability.py  graph_construction.py  metrics.py
spatialtissuepy/spatial/: __init__.py  clustering.py  distance.py  metrics.py  neighborhood.py
spatialtissuepy/statistics/: __init__.py  colocalization.py  hotspots.py  metrics.py  spatial_stats.py
spatialtissuepy/summary/: __init__.py  neighborhood.py  panel.py  population.py  registry.py  spatial.py  summary.py
spatialtissuepy/synthetic/: __init__.py  base.py
spatialtissuepy/synthetic/physicell/: __init__.py  parser.py  reader.py
spatialtissuepy/topology/: __init__.py  analysis.py  cover.py  filters.py  mapper.py  nerve.py  spatial_filters.py  summary_metrics.py  visualization.py
spatialtissuepy/utils/: __init__.py  metrics.py
spatialtissuepy/viz/: __init__.py  comparison.py  config.py  lda.py  mapper.py  network.py  qc.py  spatial.py  statistics.py
tests/: FINAL_SUMMARY.md  PHASE10_SUMMARY.md  PROGRESS.md  QUICKSTART.md  README.md  __init__.py  conftest.py  test_core.py  test_core_extended.py  test_custom_metrics.py  test_io.py  test_lda.py  test_microenvironment.py  test_network.py  test_physicell_io.py  test_physicell_labels.py  test_physicell_microenvironment.py  test_spatial.py  test_statistics.py  test_summary.py  test_summary_panel_pickle.py  test_synthetic.py  test_topology.py  test_viz.py
