[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatialtissuepy"
version = "0.2.0"
description = "Spatial analysis tools for tissue biology and multiplexed imaging"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "spatialtissuepy developers"}
]
keywords = [
    "spatial-analysis",
    "tissue-biology",
    "multiplexed-imaging",
    "cell-biology",
    "spatial-statistics",
    "LDA",
    "topic-modeling",
    "cellular-neighborhoods",
    "tumor-microenvironment",
    "bioinformatics",
    "physicell",
    "agent-based-modeling"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.3",
    "seaborn>=0.11",
]
network = [
    "networkx>=2.6",
]
io = [
    "anndata>=0.8",
    "h5py>=3.0",
]
progress = [
    "tqdm>=4.60",
]
mcp = [
    "fastmcp>=2.0,<3",
    "pydantic>=2.0",
    "networkx>=2.6",
]
all = [
    "matplotlib>=3.3",
    "seaborn>=0.11",
    "networkx>=2.6",
    "anndata>=0.8",
    "h5py>=3.0",
    "tqdm>=4.60",
    "fastmcp>=2.0,<3",
    "pydantic>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.scripts]
spatialtissuepy-mcp = "spatialtissuepy.mcp.cli:main"

[project.urls]
Homepage = "https://github.com/spatialtissuepy/spatialtissuepy"
Documentation = "https://spatialtissuepy.readthedocs.io"
Repository = "https://github.com/spatialtissuepy/spatialtissuepy"
Issues = "https://github.com/spatialtissuepy/spatialtissuepy/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py38"
# Tutorial notebooks are prose-first and rely on cross-cell state that ruff
# reads as undefined names. They are exercised by nbsphinx at docs build time.
extend-exclude = ["docs/tutorials/*.ipynb", "*/.ipynb_checkpoints/*"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    # Annotation-style modernisations. The package still supports Python 3.8,
    # and rewriting ~950 annotations to PEP 585/604 form is churn with no
    # runtime effect under `from __future__ import annotations`. Revisit when
    # the 3.8 floor is dropped.
    "UP006",  # non-pep585-annotation (Dict -> dict)
    "UP007",  # non-pep604-annotation-union (Union[x, y] -> x | y)
    "UP045",  # non-pep604-annotation-optional (Optional[x] -> x | None)
]

[tool.ruff.lint.per-file-ignores]
# Package __init__ files re-export their public API; the imports are the point.
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
